--- a/assets/css/gpr-theme-shadow.css
+++ b/assets/css/gpr-theme-shadow.css
@@ -3,7 +3,7 @@ S2W Shadow Themes
 ------------------------------------*/
 
 [id*='gpr_widget'].gpr-shadow-light-style, [id*='gpr_widget'] .gpr-shadow-light-style, [id*='gpr_widget'].gpr-shadow-dark-style, [id*='gpr_widget'] .gpr-shadow-dark-style {
-	padding: 30px;
+	padding: 20px;
 	border: 1px solid #E6E6E6;
 	background-color: #F7F7F7;
 	-moz-box-shadow: inset 0 5px 5px #FEFEFE, 0px 0px 40px rgba(0, 0, 0, 0.08);
